fixed some spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
 }
 
 .padding {
-	padding: 50px 125px;
+	padding: 50px 50px;
 }
 
 h1,
